Fixed formatting issues in diaery entries.

--- a/.diary/entries/2019/03/08.md
+++ b/.diary/entries/2019/03/08.md
@@ -2,21 +2,15 @@
 
 Maybe the context itself is just:
 
-```json
-{
-  "local": {
-    // ....current activity stuff....
-  },
-  "global": {
-    // ...previous activities stuff...
-  },
-  "env": {
-    // ...env stuff...
-  },
-  "params": {
-    // ...params stuff...
-  }
-}
+```yaml
+local:
+#....current activity stuff....
+global:
+  #...previous activities stuff...
+env:
+  # ...env stuff...
+params:
+  #...params stuff...
 ```
 
 OR
@@ -29,16 +23,12 @@ env YEAR=2018 etl-js run my.yml
 
 Right now we have:
 
-```json
-{
-  "etl": {
-    "exit": false
-  },
-  "step1": {
-    // ...
-  }
-  // ...
-}
+```yaml
+etl:
+  exit: false
+  step1:
+    # ...
+  # ...
 ```
 
 Proposal:
