--- a/.diary/entries/2019/11/25.md
+++ b/.diary/entries/2019/11/25.md
@@ -40,16 +40,15 @@ We could do something like:
 
 And then in the ETL template:
 
-```json
-    {
-    	"mods": [ "my-etl-js-plugin" ],
-    	"etl": [ "step1" ],
-    	"step1": {
-    		"my-etl-js-plugin": {
-    			...
-    		}
-    	}
-    }
+```yaml
+mods:
+	- my-etl-js-plugin
+etl:
+	- step1
+step1:
+	my-etl-js-plugin:
+		# ...
+	# ...
 ```
 
 It's a bit awkward to mix custom stuff and "reserved" stuff. For example, we need to make sure mods name do not conflict with "etl", "etlSet", and "mods" (if we use it). Maybe look for a different structure?
@@ -57,19 +56,19 @@ It's a bit awkward to mix custom stuff and "reserved" stuff. For example, we nee
 Idea one: turn "etl" into the container for steps for etl. Like so:
 
 ```yaml
-    mods:
-    	- lpezet@something
-    	- commands
-    	- file
-    etlSets:
-    	mySet1:
-    		- step1
-    etl:
-    	step1:
-    		lpezet@something:
-    			...
-    	step2:
-    		...
+mods:
+	- lpezet@something
+	- commands
+	- file
+etlSets:
+	mySet1:
+		- step1
+etl:
+	step1:
+		lpezet@something:
+			...
+	step2:
+		...
 ```
 
 Note on plugins/mods: maybe enforce namespace in modules. Those without are built-in (e.g. commands, files, etc.). Custom ones must be with namespace (e.g. lpezet@my-etl-js-plugin) or an error (or WARNING?) is thrown.
