Fixed formatting issues in diary entries. Updated gitignore.

--- a/.diary/entries/2021/02/18.md
+++ b/.diary/entries/2021/02/18.md
@@ -1,4 +1,4 @@
-# (02/18/2021) New architecture
+## (02/18/2021) New architecture
 
 Working on re-coding ETL.
 Work started in "rearch" (re-architecture) folder(s) (including in tests/).
