--- a/.diary/entries/2021/02/21.md
+++ b/.diary/entries/2021/02/21.md
@@ -1,4 +1,4 @@
-# (02/21/2021) Following on 2/18/2021
+## (02/21/2021) Following on 2/18/2021
 
 I forgot that the new `Activity` structure is as such:
 
